21 nov and use effect

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.Boxx {
+  background-color: #426f7b;
+  text-align: center;
+  margin: 2rem;
+  border-radius: 2rem;
+}
